fix: Fix loading progress bar so it's not hidden by the Navigation bar
Change style to make progress bar more visible.
Make sure showLoading is happening before the call to retrieve users and questions.

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,13 @@
 
 #root {
     background-color: var(--primary);
-    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.25));
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25));
+}
+
+.loading {
+    background-color: var(--warning);
+    height: 3px;
+    position: absolute;
 }
 
 .App-logo {
